Update the date Id across pages and increased fix-header z-index

--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ h1 {
   .fixed-navbar {
     position: fixed;
     top: 0;
+    z-index: 1000000000;
     left: 0;
     width: 100%;
     box-shadow: var(--dark-shadow);
